k3s/memos/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.24.0
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - port: 5230
